--- a/callTicket/package.json
+++ b/callTicket/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
     "expo": "~54.0.31",
+    "expo-image-picker": "~17.0.10",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
