fix: fazendo build de desenvovimento local

--- a/callTicket/app.json
+++ b/callTicket/app.json
@@ -7,6 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": false,
+    "plugins": [
+      "expo-dev-client"
+    ],
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -16,6 +19,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.callticket.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -25,6 +29,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7d08b936-f6db-4fb5-ba99-214470954595"
+      }
     }
   }
 }
